# DNA-Flex

./: CONTRIBUTING.md  README.md  app.py  index.html  requirements.txt
dnaflex/: flexibility.py
dnaflex/common/: base_config.py  folding_input.py
dnaflex/constants/: atom_layouts.py  atom_types.py  chemical_component_sets.py  chemical_components.py  mmcif_names.py  residue_names.py
dnaflex/data/: __init__.py  cache.py  loader.py  manager.py  providers.py
dnaflex/data/cpp/: CMakeLists.txt  msa_profile_pybind.cc  msa_profile_pybind.h
dnaflex/data/test_data/: sample_sequence.fasta  sample_structure.json
dnaflex/data/tools/: rdkit_utils.py
dnaflex/flexablity/: flexibility.py
dnaflex/jax/attention/: attention.py  attention_base.py  attention_call_arg_specs.py  flash_attention.py  xla_attention.py
dnaflex/jax/common/: array_view.py  precision.py  triton_utils.py
dnaflex/jax/gated_linear_unit/: block.py  gated_linear_unit.py  gated_linear_unit_base.py  matmul_config.py
dnaflex/jax/geometry/: rigid_matrix_vector.py  rotation_matrix.py  struct_of_array.py  utils.py  vector.py
dnaflex/models/: __init__.py  analysis.py  dna_data_processing.py  dna_llm.py  drug_binding.py  dynamics.py  feat_batch.py  features.py  generative.py  model_config.py  mutation_analysis.py  nlp_analysis.py  protein_llm.py
dnaflex/models/atom_layout/: atom_layout.py
dnaflex/models/components/: haiku_modules.py  mapping.py  utils.py
dnaflex/parsers/: parser.py
dnaflex/parsers/cpp/: CMakeLists.txt  __init__.py  build.py  cif_dict.pyi  cif_dict_lib.cc  cif_dict_lib.h  cif_dict_pybind.cc  cif_dict_pybind.h  fasta_iterator.cc  fasta_iterator.pyi  fasta_iterator_lib.cc  fasta_iterator_lib.h  fasta_iterator_pybind.cc  fasta_iterator_pybind.h  module.cc  msa_conversion.cc  msa_conversion.pyi  msa_conversion_lib.cc  msa_conversion_lib.h  msa_conversion_pybind.cc  msa_conversion_pybind.h  msa_profile.cc  msa_profile_handler.h  msa_profile_lib.h  msa_profile_pybind.cc  msa_profile_pybind.h
dnaflex/structure/: chemical_components.py  sterics.py  structure.py
dnaflex/tests/: __init__.py  test_atom_layout.py  test_data.py  test_direct.py  test_dna_constants.py  test_dna_llm.py  test_integration.py  test_protein_llm.py
docs/: api.md  developer_guide.md
models/: __init__.py  drug_binding.py  mutation_analysis.py  nlp_analysis.py  protein_llm.py
models/analysis/: __init__.py
models/dynamics/: __init__.py
models/generative/: __init__.py
notebooks/: flex.ipynb
templates/: index.html
(+15 files in other folders)
